--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "history": "^4.10.1",
+    "plotly.js": "^1.58.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-plotly": "^1.0.0",
+    "react-plotly.js": "^2.5.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
